# pp

./: README.md  conv.py  pyproject.toml  terminal_256_colours.py  x.sh
pp/: bench.py  c.py  gradient.py  log.py  pp.py
pp/colour/: c.py  gradient.py
pp/log/: log.py
test/pp/: test_c.py  test_pp.py
