[project]
name = "pp"
version = "0.0.1"
authors = [
  { name="tmck-code", email="tmck01@gmail.com" },
]
description = "terminal/cli/python helpers for colour and pretty-printing"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/tmck-code/pp"
Issues = "https://github.com/tmck-code/pp/issues"
